--- a/css/style.css
+++ b/css/style.css
@@ -196,8 +196,8 @@ textarea {
 
 .home-hero {
   color: #fff;
-/*   background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg);  */
-  background: url(/resource/theme2.jpg);
+  background: linear-gradient(to right, rgba(0, 98, 185, 0.8), rgba(0, 98, 185, 0.8)), url(../../assets/svg/common-bg.svg); 
+/*   background: url(/resource/theme2.jpg); */
   background-position: center;
   height: 100vh;
   min-height: 80rem;
